@@ -1,0 +1,8 @@
+#ifndef _PYXED_H_
+#define _PYXED_H_
+
+#include "includes.h"
+
+extern PyObject *invalid_instruction;
+
+#endif /* _PYXED_H_ */
